Avoids idea title overflow

--- a/app/assets/stylesheets/idea.css.sass
+++ b/app/assets/stylesheets/idea.css.sass
@@ -20,6 +20,8 @@
   .title
     line-height:      90%
     white-space:      nowrap
+    text-overflow:    ellipsis
+    overflow:         hidden
     a
       span
         color:            $textColor
